# GoMongoDb

./: .gitignore  ReadMe.md
TestData/: SwcReader.h
src/: gen.bat
src/DBMS/: .gitignore  compose.yml  config.json  config_dev.json  go.mod  go.sum  nginx.conf
src/DBMS/UnitTest/: test.go
src/DBMS/apihandler/: api.go
src/DBMS/bll/: bll.go  cache.go  initialize.go  typeconverthelper.go
src/DBMS/cmd/: main.go
src/DBMS/config/: configmanager.go
src/DBMS/dal/: helper.go  operation.go  typedef.go
src/DBMS/dbmodel/: model.go
src/Hello/: go.mod  go.sum
src/Hello/dal/mongodb/: helper.go  interface.go  operation.go
src/Hello/dbmodel/mongodb/: model.go
src/SwcManager/: CMakeLists.txt  main.cpp  vcpkg.json
src/SwcManagerClient/: CMakeLists.txt  main.cpp
src/SwcManagerClient/Resource/: resources.qrc
src/SwcManagerClient/src/framework/: TypeDef.h
src/SwcManagerClient/src/framework/config/: AppConfig.h
src/SwcManagerClient/src/framework/defination/: ImageDefination.h  TypeDef.h
src/SwcManagerClient/src/framework/service/: CachedProtoData.h  RpcCall.h  WrappedCall.h
src/SwcManagerClient/src/swcio/: SwcReader.h
src/SwcManagerClient/src/ui/: EditorBase.h  editordailystatisticsmetainfo.cpp  editordailystatisticsmetainfo.h  editordailystatisticsmetainfo.ui  editorprojectmetainfo.cpp  editorprojectmetainfo.h  editorswcmetainfo.cpp  editorswcmetainfo.h  editorswcnode.cpp  editorswcnode.h  editorswcnode.ui  editorswcnodedata.cpp  editorswcnodedata.h  editorswcnodedata.ui  editorusersettings.cpp  editorusersettings.h  editorusersettings.ui  leftclientview.cpp  leftclientview.h  leftclientview.ui  loginwindow.cpp  loginwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerwindow.cpp  registerwindow.ui  rightclientview.cpp  rightclientview.h  viewcreateproject.cpp  viewcreateproject.ui  viewcreateswc.cpp  viewcreateswc.h  viewcreateswc.ui  vieweportswctofile.cpp  vieweportswctofile.h  vieweportswctofile.ui  viewimportswcfromfile.cpp  viewimportswcfromfile.h  viewimportswcfromfile.ui
src/SwcManager_AIO/: CMakeLists.txt  main.cpp
src/proto/: ToDoCheck.txt
src/proto/Message/: Message.proto  Request.proto  Response.proto
src/proto/Service/: Service.proto
